src/test/deca/context/invalid/created/binary_exp/op_arith/plus_0.5_null.deca
// Description :
//    test plus entre un 0.5 et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type 0.5, L’opérande droite est de type null. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur +
class A{}
{
A a = new A();
int c = 0.5 + null;
}
